# AutoRover

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Code of Conduct.md  Dockerfile  FindLibRT.cmake  LICENSE  README.md  runner
.gitlab/issues_templates/: issue_template.md
cmake/: CMakeLists.txt
src/: template-opencv.cpp
src/ConeDetector/: ConeDetector.cpp  ConeDetector.hpp
src/Data/: evaluate_steering.py  formatting.py  log.txt
src/PrimeChecker/: helloworld.cpp
src/algorithm/: algorithm.cpp  algorithm.hpp
src/algorithm/SteeringAngle/: Rec1Original.csv  Rec1Plot.csv  Rec2.csv  Rec3.csv  Rec4.csv  Rec5.csv  plot_rec1.gnu
src/recordings/: docker-compose.yaml  recordings.txt
tests/: TestPrimeChecker.cpp
